# judgebench

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: pairwise_dataset.csv  sample_dataset.csv  sample_results.csv
results/: baseline_report.md
src/judgebench/: __init__.py
src/judgebench/benchmark/: runner.py  statistics.py
src/judgebench/cli/: main.py
src/judgebench/config/: settings.py
src/judgebench/datasets/: loader.py
src/judgebench/judge/: client.py  evaluator.py  parser.py
src/judgebench/metrics/: aggregation.py  normalization.py
src/judgebench/prompts/: renderer.py
src/judgebench/prompts/templates/: judge_description.j2  pairwise_comparison.j2  semantic_eval.j2
src/judgebench/reports/: csv_report.py  html_report.py  markdown_report.py
src/judgebench/schemas/: dataset.py  evaluation.py  results.py
tests/: test_benchmark_runner.py  test_cli.py  test_evaluator.py  test_normalization.py  test_prompt_rendering.py  test_result_parsing.py
