[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "judgebench"
version = "0.1.0"
description = "Local-first benchmarking for LLM-as-a-judge evaluation: structured scoring and pairwise comparisons from CSV datasets with exportable results and reports."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Eduardo J. Barrios", email = "" }]
keywords = ["evaluation", "benchmarking", "llm-as-a-judge", "nlp", "metrics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "jinja2>=3.1",
  "openai>=1.30",
  "pandas>=2.0",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
judgebench = "judgebench.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/judgebench"]
include = ["src/judgebench/prompts/templates/*.j2"]

[tool.hatch.build.targets.sdist]
include = [
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
  "/src/**",
  "/tests/**",
  "/examples/**",
  "/results/**",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
